# nelore

./: CMakeLists.txt  README.md
data/models/: cube.gltf  plane.gltf  protocube.gltf  unwrapped_cube.gltf
data/shaders/: default.frag  default.vert
data/tests/: light.frag  render.frag  render.vert
src/: CMakeLists.txt  nelpch.hpp
src/nel/: _nel.hpp  nel.hpp
src/nel/core/: core.hpp  engine.cpp  engine.hpp  input.cpp  input.hpp  resource_manager.cpp  resource_manager.hpp  scene_manager.cpp  scene_manager.hpp  time.hpp  window.cpp  window.hpp
src/nel/ecs/: camera_system.cpp  camera_system.hpp  components.hpp  ecs.hpp  entity.cpp  entity.hpp  render_system_3d.cpp  render_system_3d.hpp  scene.cpp  scene.hpp
src/nel/resources/: _resources.hpp  framebuffer.cpp  framebuffer.hpp  model.cpp  model.hpp  render_object.cpp  render_object.hpp  resources.hpp  shader.cpp  shader.hpp  texture_2d.cpp  texture_2d.hpp
src/nel/util/: _util.hpp  file.hpp  logger.cpp  logger.hpp  random.hpp  util.hpp
tests/: CMakeLists.txt  camera.hpp  game.cpp  game.hpp  main.cpp
tests/data/shaders/: render.frag  render.vert
